k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: quantum-svm-service
  namespace: default
  labels:
    app: quantum-svm-predictor
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8000
    protocol: TCP
    name: http
  selector:
    app: quantum-svm-predictor
